# aoc2022

./: .gitignore  LICENSE  README.md  aoc2022.cabal  day01.hs  day02.hs  package.yaml
py/: day11.py  day12.py  day16.py  day17.py  day19.py  day21.py  day22.py  day23.py  day24.py  day25.py  timer.py
src/: AOC.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day18.hs  Day20.hs  Day21.hs  Main.hs
