cabal-version:      1.12
name:               aoc2022
version:            0.1.0.0
author:             GlenboLake
maintainer:         glenbolake@gmail.com
extra-source-files: CHANGELOG.md

library
  exposed-modules:  Main, Day01, Day02, Day03, Day04, Day05, Day06, Day07, Day08, Day09, Day10, Day12, Day13, Day14, Day15, Day18, Day20, Day21
  build-depends:    base >=4.7, split >=0.2.3.4, containers
  hs-source-dirs:   src
  default-language: Haskell2010
